[tool.poetry]
name = "mobilesam"
version = "0.1.0"
description = ""
authors = ["hobbymarks <ihobbymarks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.2"
jupyterlab-code-formatter = "^2.2.1"
jupyterlab-execute-time = "^3.0.0"
torchvision = "^0.15.2"
yapf = "^0.40.1"
isort = "^5.12.0"
ipython = "^8.14.0"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.1"
timm = "^0.9.2"
ipywidgets = "^8.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
